@@ -22,9 +22,11 @@ setClass("mer",
 			X = "matrix",	   # X
 			y = "numeric",	   # y
 			wts = "numeric",   # weights
+                        ## do we need this for mer?
 			wrkres = "numeric",# working residuals (copy of y for LMMs)
 			method = "character", # parameter estimation method
-			useScale = "logical", # should scale factor be included
+                           ## scale now included in devComp
+			   ## useScale = "logical", # should scale factor be included
 			## invariants derived from data structure
 			cnames = "list",   # column names of model matrices
 			nc = "integer",	   # dimensions of blocks in Omega
