@@ -14,7 +14,7 @@ static R_CallMethodDef CallEntries[] = {
     {"mer_MCMCsamp", (DL_FUNC) &mer_MCMCsamp, 5},
     {"mer_coef", (DL_FUNC) &mer_coef, 2},
     {"mer_coefGets", (DL_FUNC) &mer_coefGets, 3},
-    {"mer_create", (DL_FUNC) &mer_create, 8},
+    {"mer_create", (DL_FUNC) &mer_create, 7},
     {"mer_dtCMatrix", (DL_FUNC) &mer_dtCMatrix, 1},
     {"mer_dtCMatrix_inv", (DL_FUNC) &mer_dtCMatrix_inv, 1},
     {"mer_factor", (DL_FUNC) &mer_factor, 1},
@@ -86,7 +86,6 @@ void R_init_lme4(DllInfo *dll)
     lme4_ranefSym = install("ranef");
     lme4_statusSym = install("status");
     lme4_uploSym = install("uplo");
-    lme4_useScaleSym = install("useScale");
     lme4_wrkresSym = install("wrkres");
     lme4_wtsSym = install("wts");
     lme4_xSym = install("x");
