@@ -1,3 +1,9 @@
+2006-09-22  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/AllClass.R (and many other files): delete the useScale slot in
+	an mer object and incorporate the scale in the devComp slot.  A
+	negative value indicates a fixed scale.
+
 2006-09-21  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/AllClass.R: remove family and call slots from the mer object.
